--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@angular/animations": "^16.2.10",
     "@angular/cdk": "^16.2.9",
     "@angular/compiler": "^16.2.10",
-    "@angular/material": "^16.2.9"
+    "@angular/material": "^16.2.9",
+    "express": "^4.18.2"
   }
 }
