--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "@angular/compiler": "^16.2.10",
     "@angular/material": "^16.2.9",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
