--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-spring.datasource.url=jdbc:h2:file:./data/plantsdb
+spring.datasource.url=jdbc:h2:file:./data/mynamaiDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
