updated to docker img / postgres

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-# Database connection settings
-spring.datasource.url=jdbc:h2:file:./data/mynamaiDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
+# Database connection settings for PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/mynamaiDB
+spring.datasource.username=misho
+spring.datasource.password=wanknomo
+spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate settings
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
