--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-# Database connection settings for PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/mynamaiDB
 spring.datasource.username=misho
 spring.datasource.password=wanknomo
 spring.datasource.driverClassName=org.postgresql.Driver
+# Validate the existing database schema without making any changes
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.properties.hibernate.dialect=
+#spring.jpa.hibernate.ddl-auto=
 
-# Hibernate settings
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+# Flyway locations
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
