--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,11 +2,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mynamaiDB
 spring.datasource.username=misho
 spring.datasource.password=wanknomo
 spring.datasource.driverClassName=org.postgresql.Driver
+
 # Validate the existing database schema without making any changes
 spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=
-#spring.jpa.hibernate.ddl-auto=
+# Uncomment the line below if you want Spring Boot to handle schema updates
+#spring.jpa.hibernate.ddl-auto=update
+
+# Set the appropriate Hibernate dialect for PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Flyway locations
 spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-on-migrate=false
+spring.flyway.validate-on-migrate=false
+logging.level.org.flywaydb=DEBUG
