--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -2,14 +2,22 @@ spring:
   datasource:
     username: misho
     password: wanknomo
-    url: jdbc://postgresql://localhost:5432/mynamaiDB
-
+    url: jdbc:postgresql://localhost:5432/mynamaiDB
+    schema:
+      - classpath:schema.sql
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    validate-on-migrate: false
+    baseline-on-migrate: true
+    schemas: public
+    baseline-version: 1
   sql:
     init:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
 
 server:
