--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/mynamaiDB
-spring.datasource.username=misho
-spring.datasource.password=wanknomo
-spring.datasource.driverClassName=org.postgresql.Driver
-# Validate the existing database schema without making any changes
-spring.jpa.hibernate.ddl-auto=none
-# Uncomment the line below if you want Spring Boot to handle schema updates
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# Flyway locations
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=false
-logging.level.org.flywaydb=DEBUG
-server.servlet.context-path=/api
+#spring.datasource.url=jdbc:postgresql://localhost:5432/mynamaiDB
+#spring.datasource.username=misho
+#spring.datasource.password=wanknomo
+#spring.datasource.driverClassName=org.postgresql.Driver
+## Validate the existing database schema without making any changes
+#spring.jpa.hibernate.ddl-auto=none
+## Uncomment the line below if you want Spring Boot to handle schema updates
+##spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+## Flyway locations
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=false
+#logging.level.org.flywaydb=DEBUG
+#server.servlet.context-path=/api
